--- a/css/main.css
+++ b/css/main.css
@@ -570,6 +570,7 @@ footer .txt_wrap .nav_wrap{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 footer .txt_wrap .nav_wrap .nav_txt{
   display: flex;
@@ -593,13 +594,13 @@ footer .txt_wrap .nav_wrap .nav_txt>li:last-child a{
   border-right: none;
   padding-right: 0px;
 }
-footer .txt_wrap .seletsns_wrap{
+footer .txt_wrap .nav_wrap .seletsns_wrap{
   display: flex;
 }
-footer .txt_wrap .seletsns_wrap .select{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select{
   display: flex;
 }
-footer .txt_wrap .seletsns_wrap .select .select_btn{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn{
   position: relative;
   background-color: transparent;
   color: #ddd;
@@ -613,7 +614,7 @@ footer .txt_wrap .seletsns_wrap .select .select_btn{
   margin-left: 18px;
   cursor: pointer;
 }
-footer .txt_wrap .seletsns_wrap .select .select_btn::before{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn::before{
   content: '';
   margin: auto;
   position: absolute;
@@ -626,13 +627,13 @@ footer .txt_wrap .seletsns_wrap .select .select_btn::before{
   bottom: 0;
   transition: all 0.5s;
 }
-footer .txt_wrap .seletsns_wrap .select .select_btn:hover::before{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn:hover::before{
   transform: rotate(180deg);
 }
-footer .txt_wrap .seletsns_wrap .select .select_btn:hover .select_list{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_btn:hover .select_list{
   display: block;
 }
-footer .txt_wrap .seletsns_wrap .select .select_list{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_list{
   display: none;
   position: absolute;
   padding: 17px;
@@ -647,13 +648,13 @@ footer .txt_wrap .seletsns_wrap .select .select_list{
   border: 1px solid #999;
   height: 160px;
 }
-footer .txt_wrap .seletsns_wrap .select .select_list li:hover{
+footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_list li:hover{
   text-decoration: underline;
 }
-footer .txt_wrap .seletsns_wrap .sns_txt{
+footer .txt_wrap .nav_wrap .seletsns_wrap .sns_txt{
   display: flex;
 }
-footer .txt_wrap .seletsns_wrap .sns_txt .img{
+footer .txt_wrap .nav_wrap .seletsns_wrap .sns_txt .img{
   width: 30px;
   height: 32px;
   margin-left: 12px;
