--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -23,13 +23,13 @@
     line-height: 0;
 
     position: absolute;
-    top: 70px;
+    top: 10%;
 
     display: block;
-    width: 84px;
-    height: 81px;
-
+    max-width: 84px;
     padding: 0;
+    width: 10%;
+    aspect-ratio: 1;
 
 
     cursor: pointer;
@@ -78,7 +78,7 @@
 {
     left: -45px;
     background-color: red;
-    background: url(../images/왼쪽버튼.png) center/cover;
+    background: url(../images/왼쪽버튼.png) no-repeat center/cover;
 }
 /* [dir='rtl'] .slick-prev
 {
@@ -97,7 +97,7 @@
 .slick-next
 {
     right: -40px;
-    background: url(../images/오른쪽버튼.png) center/cover;
+    background: url(../images/오른쪽버튼.png)no-repeat center/cover;
 }
 /* [dir='rtl'] .slick-next
 {
