--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ header .menu_wrap .menu .gnb li .gnb_2depth li.on:hover a::before{
 }
 header .menu_wrap .menu .gnb li .gnb_2depth li .gnb_3depth{
   display: none;
-  top: -11px;
+  top: -9.4px;
   margin-left: 80px;
   position: absolute;
   height: 246px;
@@ -262,17 +262,18 @@ header .smenu_wrap .smenu .img img{
   margin-bottom: 10px;
 }
 #content2 .recom_slide li .recom_bottom .img{
-  flex: 0.35;
+  flex: 0.25;
 }
 #content2 .recom_slide li .recom_bottom .img img{
-  max-width: 109.2px;
+  max-width: 110px;
+  min-width: 100px;
   background-color: #f9f9f9;
   border: 1px solid #f6f6f6;
   width: 100%;
   box-sizing: border-box;
 }
 #content2 .recom_slide li .recom_bottom .txt{
-  flex: 0.65;
+  flex: 0.75;
   margin: 15px;
   max-width: none;
 }
@@ -283,7 +284,7 @@ li .txt{
 }
 li .txt1{
   font-size: 1rem;
-  line-height: 20px;
+  line-height: 1.3;
   letter-spacing: -1px;
 }
 li .txt2{
@@ -386,8 +387,7 @@ li .img .icon_wrap .cart{
 #content3 .slick-next,
 #content4 .slick-prev,
 #content4 .slick-next{
-  width: 70px;
-  height: 68px;
+  width: 7%;
   top: 20%;
 }
 #content3 .slick-prev,
@@ -478,7 +478,13 @@ li .img .icon_wrap .cart{
 }
 #content5 .review_slide .slick-prev,
 #content5 .review_slide .slick-next{
-  top: 140px;
+  top: 30%;
+}
+#content5 .review_slide .slick-prev{
+  left: -50px;
+}
+#content5 .review_slide .slick-next{
+  right: -50px;
 }
 
 #content6{
@@ -653,6 +659,7 @@ footer .txt_wrap .nav_wrap .seletsns_wrap .select .select_list li:hover{
 }
 footer .txt_wrap .nav_wrap .seletsns_wrap .sns_txt{
   display: flex;
+  margin-left: 10px;
 }
 footer .txt_wrap .nav_wrap .seletsns_wrap .sns_txt .img{
   width: 30px;
@@ -681,22 +688,22 @@ footer .txt_wrap .copy_wrap .copy_txt li:not(.first)::before{
   height: 12px;
   margin-right: 10px;
 }
-footer .txt_wrap .cs_txt{
+footer .txt_wrap .copy_wrap .cs_txt{
   color: #ddd;
   margin-left: 110px
 }
-footer .txt_wrap .cs_txt .cs_txt1{
+footer .txt_wrap .copy_wrap .cs_txt .cs_txt1{
   font-size: 1rem;
 }
-footer .txt_wrap .cs_txt .cs_txt2{
+footer .txt_wrap .copy_wrap .cs_txt .cs_txt2{
   font-size: 2.13rem;
   text-decoration: underline;
   margin-bottom: 10px;
 }
-footer .txt_wrap .cs_txt .cs_txt3{
-  font-size: 5px;
+footer .txt_wrap .copy_wrap .cs_txt .cs_txt3{
+  font-size: 12px;
 }
-footer .txt_wrap .cs_txt .cs_txt4{
-  font-size: 5px;
+footer .txt_wrap .copy_wrap .cs_txt .cs_txt4{
+  font-size: 12px;
   margin-top: 5px;
 }
